# agent-skills

./: Dockerfile  README.md  agentcore-IAM.md  docker-entrypoint.sh  drawio-skill.md  installer.md  installer.py  requirements.txt  uninstaller.py  websearch.md
application/: .gitignore  agentcore_memory.py  app.py  bedrock_data_retention.py  chat.py  discord_bot.py  favorite_tools.json  info.py  langgraph_agent.py  llm_gateway_models.py  mcp.list  mcp_config.py  mcp_memory.py  mcp_server_korea_weather.py  mcp_server_memory.py  runtime_mode.py  skill.py  skills.list  task_store.py  telegram_bot.py  user_agent.json  utils.py
application/api/: routes_chat.py  routes_config.py  routes_rag.py  routes_tasks.py
application/artifacts/: .gitignore  agentcore_ppt.mjs  asil-price-lookup.skill  book-search.skill  create_stock_report.mjs  elementary_6th_grade_book_recommendations.md  model-discover.skill  package.json  package_skill.py  ppt-translator.skill  receipts_summary.xlsx  stock_report.docx
application/skills/graphify/: SKILL.md
application/skills/kma-weather/: SKILL.md
application/skills/ppt-translator/: README.md  SKILL.md  glossary.yaml  mcp_server.py  pyproject.toml  requirements.txt
application/skills/ppt-translator/docs/: cheatsheet.md  ppt_handler_structure.md
application/skills/ppt-translator/ppt_translator/: __init__.py
application/skills/ppt-translator/ppt_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
application/skills/ppt-translator/samples/: en.pptx
application/web/: tsconfig.tsbuildinfo
chat_ui/: index.html
(+21 files in other folders)
